# slon2023

./: .gitignore  AhoCorasic.cpp  AhoCorasic.h  CMakeLists.txt  EditableTableWidget.cpp  EditableTableWidget.h  MainWindow.cpp  MainWindow.h  Matcher.cpp  Matcher.h  MathExpr.cpp  MathExpr.h  MathTree.cpp  MathTree.h  Node.cpp  Node.h  ParseError.cpp  ParseError.h  PointGraphicsItem.cpp  PointGraphicsItem.h  Polygon.cpp  Polygon.h  PolygonGraphicsItem.cpp  PolygonGraphicsItem.h  PolygonModel.cpp  PolygonModel.h  README.md  functionList.cpp  main.cpp  run
